# deepfold

./: .env  .env.example  .gitignore  docker-compose.yml  license.md  pyproject.toml  readme.md  requirements.txt  test_db_connection.py
app/: Dockerfile  manage.py
app/accounts/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
app/accounts/management/commands/: assign_tasks.py  setup_address_configs.py
app/accounts/migrations/: 0001_initial.py  0002_organisation_user_organisation_organisationinvite.py  0003_task_userprofile.py  0004_addressconfiguration_remove_organisation_address_and_more.py  0005_task_points.py  0006_auto_20241109_0121.py  0007_merge_0005_task_points_0006_auto_20241109_0121.py  0008_publishingoutlet_created_publishingoutlet_modified.py  0009_remove_address_configuration_address_address_type_and_more.py
app/accounts/templates/: base.html
app/accounts/templates/accounts/: add_address.html  add_outlet.html  complete_profile.html  dashboard.html  edit_organisation.html  edit_personal_details.html  login.html  manage_profile.html  publication_detail.html  publications.html
app/accounts/templates/accounts/tags/: task_list.html
app/accounts/templates/includes/: sidebar.html  task_list.html
app/accounts/templatetags/: sidebar_tags.py
app/deepfold/: asgi.py  settings.py  urls.py
app/deepfold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
